# RdkXdslManager

./: CONTRIBUTING.md  Makefile.am  NOTICE  README.md  configure.ac
cfg/: Makefile.am
config/: RdkXdslManager.xml  xdsl_manager_conf.json
hal_schema/: example_configureObject_msg.json  example_deleteObject_msg.json  example_getParametersResponse_msg.json  example_getParameters_msg.json  example_getSchemaResponse_msg.json  example_getSchema_msg.json  example_publishEvent_msg.json  example_result_msg.json  example_setParameters_msg.json  example_subscribeEvent_msg.json  xdsl_hal_schema.json
source/: Makefile.am
source/RdkXdslManager/: Makefile.am  apis_xdslmanagerplugin.c  apis_xdslmanagerplugin.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/: Makefile.am
source/TR-181/include/: xdsl_apis.h  xdsl_event_queue.h  xdsl_manager.h  xtm_apis.h
source/TR-181/integration_src.shared/: Makefile.am  XdslReport.avsc  xdsl_apis.c  xdsl_event_queue.c  xdsl_hal.c  xdsl_hal.h  xdsl_manager.c  xdsl_report.c  xdsl_report.h  xdsl_report_webpa_intf.c  xtm_apis.c
source/TR-181/middle_layer_src/: Makefile.am  cosa_apis.h  cosa_apis_busutil.h  cosa_apis_util.h  dml_api_common.h  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h  xdsl_dml.c  xdsl_dml.h  xdsl_internal.c  xdsl_internal.h  xtm_dml.c  xtm_dml.h  xtm_internal.c  xtm_internal.h
source/test/: Makefile.am  RdkXdslManagerSspTest.cpp  gtest_main.cpp
